Added IsExternalInit package
This package only includes the 'IsExternalInit' type to be able to use the 'init' keyword.
For more information: https://github.com/manuelroemer/IsExternalInit

--- a/src/YeSql.Net.csproj
+++ b/src/YeSql.Net.csproj
@@ -5,4 +5,11 @@
 	  <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="IsExternalInit" Version="1.0.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
