--- a/src/YeSql.Net.csproj
+++ b/src/YeSql.Net.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
 	  <LangVersion>latest</LangVersion>
+    <RootNamespace>YeSql.Net</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
