Copied the sample sql file to the output directory

--- a/samples/LoaderSample/LoaderSample.csproj
+++ b/samples/LoaderSample/LoaderSample.csproj
@@ -10,5 +10,11 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\YeSql.Net.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="sample.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   
 </Project>
