--- a/samples/YeSql.Net.Console/YeSql.Net.Console.csproj
+++ b/samples/YeSql.Net.Console/YeSql.Net.Console.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\YeSql.Net.csproj" />
+  </ItemGroup>
+
 </Project>
