Added examples for LoadFromFiles and LoadFromDirectories methods

--- a/samples/LoaderSample/LoaderSample.csproj
+++ b/samples/LoaderSample/LoaderSample.csproj
@@ -17,4 +17,10 @@
     </None>
   </ItemGroup>
   
+  <ItemGroup>
+    <None Update="sql/*.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  
 </Project>
