Copy the resources to the output directory

--- a/tests/YeSql.Net.Tests.csproj
+++ b/tests/YeSql.Net.Tests.csproj
@@ -24,4 +24,13 @@
     <ProjectReference Include="..\src\YeSql.Net.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <!-- SQL files with errors -->
+    <Content Include="Loader\error\*.sql" CopyToOutputDirectory="Always" TargetPath="error/%(Filename)%(Extension)" />
+    <!-- SQL files without errors -->
+    <Content Include="Loader\sql\*.sql" CopyToOutputDirectory="Always" TargetPath="sql/%(Filename)%(Extension)" />
+    <!-- .env sample files -->
+    <Content Include="Loader\env\*.env" CopyToOutputDirectory="Always" TargetPath="env/%(Filename)%(Extension)" />
+  </ItemGroup>
+
 </Project>
