--- a/samples/LoaderSample/LoaderSample.csproj
+++ b/samples/LoaderSample/LoaderSample.csproj
@@ -10,17 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\YeSql.Net.csproj" />
   </ItemGroup>
-
-  <ItemGroup>
-    <None Update="sample.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
   
-  <ItemGroup>
-    <None Update="sql/*.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+  <Import Project="..\..\src\build\YeSql.Net.targets"/>
   
 </Project>
