--- a/src/YeSql.Net.csproj
+++ b/src/YeSql.Net.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -37,6 +37,10 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="YeSql.Net.Tests" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="build\**" Pack="true" PackagePath="build\" />
   </ItemGroup>
 
 </Project>
