--- a/src/YeSql.Net.csproj
+++ b/src/YeSql.Net.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <!-- To include the targets in the NuGet package -->
     <Content Include="build\**" Pack="true" PackagePath="build\" />
   </ItemGroup>
 
