chore: Copy resource to output directory

--- a/tests/YeSql.Net.Tests.csproj
+++ b/tests/YeSql.Net.Tests.csproj
@@ -22,29 +22,34 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!-- SQL files with errors -->
     <Content 
       Include="Loader\Resources\errors\*.sql" 
       CopyToOutputDirectory="PreserveNewest" 
       TargetPath="errors\%(Filename)%(Extension)" 
     />
-    <!-- SQL file with errors -->
+
     <Content
       Include="Loader\Resources\error\*.sql"
       CopyToOutputDirectory="PreserveNewest"
       TargetPath="error\%(Filename)%(Extension)"
     />
-    <!-- SQL files without errors -->
+
     <Content 
       Include="Loader\Resources\sql\*.sql" 
       CopyToOutputDirectory="PreserveNewest" 
       TargetPath="sql\%(Filename)%(Extension)" 
     />
-    <!-- .env sample files -->
+
     <Content 
       Include="Loader\Resources\env\*.env" 
       CopyToOutputDirectory="PreserveNewest" 
       TargetPath="env\%(Filename)%(Extension)" 
+    />
+    
+    <Content 
+      Include="Loader\Resources\yesql\*.sql" 
+      CopyToOutputDirectory="PreserveNewest" 
+      TargetPath="yesql\%(Filename)%(Extension)" 
     />
   </ItemGroup>
 
