--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,7 +3,12 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="CopySqlFilesToOutputDirectory" Version="0.1.0-alpha" />
+    <PackageVersion Include="CopySqlFilesToPublishDirectory" Version="0.1.0-alpha" />
+    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageVersion Include="IsExternalInit" Version="1.0.3" />
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.3" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageVersion Include="FluentAssertions" Version="6.10.0" />
     <PackageVersion Include="NUnit" Version="3.13.3" />
