--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,9 +3,14 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="YeSql.Net" Version="0.6.0-alpha" />
     <PackageVersion Include="CopySqlFilesToOutputDirectory" Version="0.2.0-alpha" />
     <PackageVersion Include="CopySqlFilesToPublishDirectory" Version="0.1.0-alpha" />
+    <PackageVersion Include="CPlugin.Net" Version="1.0.0" />
+    <PackageVersion Include="CPlugin.Net.Attributes" Version="1.0.0" />
+    <PackageVersion Include="DotEnv.Core" Version="3.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageVersion Include="IsExternalInit" Version="1.0.3" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.3" />
