chore: Add a new nuget package

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,6 +6,7 @@
     <PackageVersion Include="YeSql.Net" Version="0.7.0-alpha" />
     <PackageVersion Include="CopySqlFilesToOutputDirectory" Version="0.2.0-alpha" />
     <PackageVersion Include="CopySqlFilesToPublishDirectory" Version="0.1.0-alpha" />
+    <PackageVersion Include="CopyPluginsToPublishDirectory" Version="1.0.0" />
     <PackageVersion Include="CPlugin.Net" Version="1.0.0" />
     <PackageVersion Include="CPlugin.Net.Attributes" Version="1.0.0" />
     <PackageVersion Include="DotEnv.Core" Version="3.0.0" />
