--- a/samples/Example.PluginApp/Host/PluginApp.Host.csproj
+++ b/samples/Example.PluginApp/Host/PluginApp.Host.csproj
@@ -1,12 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-
+    
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="DotEnv.Core" />
     <PackageReference Include="CopySqlFilesToOutputDirectory" />
+    <PackageReference Include="CopySqlFilesToPublishDirectory" />
+    <PackageReference Include="CopyPluginsToPublishDirectory" />
     <PackageReference Include="CPlugin.Net" />
     <PackageReference Include="CPlugin.Net.Attributes" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
