--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -25,6 +25,8 @@ jobs:
       run: |
        dotnet test ./tests/YeSql.Net.Tests.csproj
        dotnet test ./samples/Example.AspNetCore.Tests/Example.AspNetCore.Tests.csproj
+       dotnet publish ./samples/Example.AspNetCore.Tests/Example.AspNetCore.Tests.csproj -c Debug -o out
+       dotnet vstest ./samples/Example.AspNetCore.Tests/out/Example.AspNetCore.Tests.dll
        dotnet build ./samples/Example.PluginApp/Plugins/EmployeePlugin/PluginApp.EmployeePlugin.csproj
        dotnet build ./samples/Example.PluginApp/Plugins/UserPlugin/PluginApp.UserPlugin.csproj
        dotnet build ./samples/Example.PluginApp/Plugins/HelloPlugin/PluginApp.HelloPlugin.csproj
