--- a/samples/Example.ConsoleApp/Example.ConsoleApp.csproj
+++ b/samples/Example.ConsoleApp/Example.ConsoleApp.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="CopySqlFilesToOutputDirectory" />
+    <PackageReference Include="YeSql.Net.Example.QueryReuse" />
   </ItemGroup>
   
 </Project>
