feat: Create resources to save exception messages in different languages

--- a/src/YeSql.Net.csproj
+++ b/src/YeSql.Net.csproj
@@ -39,4 +39,19 @@
     <InternalsVisibleTo Include="YeSql.Net.Tests" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Common\Resources\ExceptionMessages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ExceptionMessages.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Common\Resources\ExceptionMessages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ExceptionMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
